[gd_scene load_steps=4 format=3 uid="uid://d1tyjpqq4xwja"]

[ext_resource type="Script" path="res://Scripts/Button.gd" id="1_hc3pb"]
[ext_resource type="Texture2D" uid="uid://b40urpvlfhmyc" path="res://Assets/Button.png" id="2_5v3eb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gehs4"]
size = Vector2(14, 9)

[node name="Button" type="Node2D"]
script = ExtResource("1_hc3pb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5v3eb")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_gehs4")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
